Fixed: Context menu arrow overlaps the label.
* Migrated menu to the table-like layout.
* Revisited menu structure.
* Revisited RTL support for the menu.
* Revisited HC support for the menu.

--- a/skins/kama/editor_ie.css
+++ b/skins/kama/editor_ie.css
@@ -100,17 +100,3 @@ a.cke_path_item:active
 	right: 1px;
 	padding-left: 1px;
 }
-
-/* #3766 In the context menu, long labels with second level menu get wrapped */
-.cke_menuarrow
-{
-	position: absolute;
-	right: 2px;
-}
-
-.cke_rtl .cke_menuarrow
-{
-	position: absolute;
-	left: 2px;
-}
-/* END #3766 */
